S302T500-430 #time 1h 30m Removed unused methods, refactored tests that used redundant methods, updated API spec to remove unused endpoints, removed unused imports, split modify business endpoint into multiple methods, added test for multiple images being saved, moved get image method into image service so it can be used for multiple types, not just business images ?test ?fix ?implement ?chore
