# api-spec.yaml
@@ -438,133 +438,6 @@ paths:
             application admin.
         '406':
           $ref: '#/components/responses/NotAcceptableError'
-  '/businesses/{businessId}/images':
-    post:
-      tags:
-        - 'U11: Modifying Businesses'
-        - Business Images
-        - Business Accounts
-      summary: Upload a new image for some photo
-      security:
-        - CookieAuth:
-            - user
-            - globalApplicationAdmin
-            - defaultGlobalApplicationAdmin
-      parameters:
-        - name: businessId
-          in: path
-          description: ID of business
-          required: true
-          schema:
-            type: integer
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                filename:
-                  type: array
-                  items:
-                    type: string
-                    format: binary
-      responses:
-        '201':
-          description: Image created successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  imageId:
-                    type: integer
-                    description: The ID of the image that has just been created
-                    example: 1234
-        '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '403':
-          description: >-
-            Forbidden: Returned when a user tries to add an image for the business
-            when they do not administer AND
-            the user is not a global application admin
-        '406':
-          $ref: '#/components/responses/NotAcceptableError'
-  '/businesses/{businessId}/images/{imageId}':
-    delete:
-      tags:
-        - 'U11: Modifying Businesses'
-        - Business Images
-        - Business Accounts
-      summary: Delete an image of a business
-      security:
-        - CookieAuth:
-            - user
-            - globalApplicationAdmin
-            - defaultGlobalApplicationAdmin
-      parameters:
-        - name: businessId
-          in: path
-          description: ID of business
-          required: true
-          schema:
-            type: integer
-        - name: imageId
-          in: path
-          description: ID of the image to delete
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Image deleted successfully
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '403':
-          description: >-
-            Forbidden: Returned when a user tries to delete an image for a
-            business that it is in a catalogue for a business they do not
-            administer AND the user is not a global application admin
-        '406':
-          $ref: '#/components/responses/NotAcceptableError'
-  '/businesses/{businessId}/images/{imageId}/makeprimary':
-    put:
-      tags:
-        - 'U11: Modifying Businesses'
-        - Business Images
-        - Business Accounts
-      summary: Set an existing image to be the new primary image for the business
-      security:
-        - CookieAuth:
-            - user
-            - globalApplicationAdmin
-            - defaultGlobalApplicationAdmin
-      parameters:
-        - name: businessId
-          in: path
-          description: ID of business
-          required: true
-          schema:
-            type: integer
-        - name: imageId
-          in: path
-          description: ID of the image to set as being the primary image for product
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Primary image successfully updated
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '403':
-          description: >-
-            Forbidden: Returned when a user tries to update the primary image
-            for the business that the user dont
-            administer AND the user is not a global application admin
-        '406':
-          $ref: '#/components/responses/NotAcceptableError'
   '/businesses/{id}/makeAdministrator':
     put:
       tags:
